src/golden/functions/typeerrors/test.golden/fnerrors.fl
	ok x = x + 3

	f x = "hello" + 3
